--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-#typings
-#**/app/**/*.map
-#node_modules
-#jspm_packages
-#bower_components
-
-.vs
-#**/*.sou
-#**/*.user
-#bin
-#obj
-#packages
+**/app/**/*.map
+**/app/**/*.js
+node_modules
+.vscode
